--- a/Ejercicio9/Ejercicio9.csproj
+++ b/Ejercicio9/Ejercicio9.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cine.cs" />
+    <Compile Include="Espectador.cs" />
+    <Compile Include="Pelicula.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
