--- a/Ejercicio11/Ejercicio11.csproj
+++ b/Ejercicio11/Ejercicio11.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IConstantes.cs" />
     <Compile Include="Jugador.cs" />
     <Compile Include="Porra.cs" />
     <Compile Include="Program.cs" />
