--- a/Ejercicio11/Ejercicio11.csproj
+++ b/Ejercicio11/Ejercicio11.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IConstantes.cs" />
     <Compile Include="Jugador.cs" />
+    <Compile Include="Partido.cs" />
     <Compile Include="Porra.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
